--- a/uk/mail/chrome/messenger/activity.properties
+++ b/uk/mail/chrome/messenger/activity.properties
@@ -48,8 +48,8 @@ autosyncEventStatusTextNoMsgs=Повідомлення не завантажен
 autosyncContextDisplayText=Синхронізація: %S
 
 # Message actions that show up in activity manager
-# LOCALIZATION NOTE (deletedMessages): #1 number of messages
-deletedMessages=Вилучено #1 лист;Вилучено #1 листи;Вилучено #1 листів
+# LOCALIZATION NOTE (deletedMessages2): #1 number of messages, #2 folder name
+deletedMessages2=Вилучено #1 лист з #2;Вилучено #1 листи з #2;Вилучено #1 листів з #2
 # LOCALIZATION NOTE (movedMessages): #1 number of messages, #2 and #3: folder names
 movedMessages=Переміщено #1 лист із #2 до #3;Переміщено #1 листи з #2 до #3;Переміщено #1 листів з #2 до #3
 # LOCALIZATION NOTE (copiedMessages): #1 number of messages, #2 and #3: folder names
