--- a/uk/mail/chrome/messenger/filter.properties
+++ b/uk/mail/chrome/messenger/filter.properties
@@ -17,6 +17,9 @@ stopButtonLabel=Стоп
 continueButtonLabel=Продовжити
 cannotEnableFilter=Можливо, фільтр був створений пізнішою версією даного ПО. Ви не можете використовувати цей фільтр, оскільки ми не знаємо, як його застосувати.
 dontWarnAboutDeleteCheckbox=Більше не питати мене
+#FIXME
+searchTermsInvalidTitle=Search Terms Invalid
+searchTermsInvalidMessage=This filter cannot be saved because some search terms are invalid in the current context.
 
 # for junk mail logging / mail filter logging
 # LOCALIZATION NOTE(junkLogDetectStr)
