--- a/uk/mail/chrome/messenger/imapMsgs.properties
+++ b/uk/mail/chrome/messenger/imapMsgs.properties
@@ -34,6 +34,14 @@
 # the terms of any one of the MPL, the GPL or the LGPL.
 #
 # ***** END LICENSE BLOCK *****
+#FIXME
+
+imapLoginFailedTitle=Login Failed
+# LOCALIZATION NOTE (imapLoginFailed): Insert "%S" in your translation where
+# you wish to display the hostname of the server to which login failed.
+imapLoginFailed=Login to server %S failed.
+imapLoginFailedRetryButton=&Retry
+imapLoginFailedEnterNewPasswordButton=&Enter New Password
 
 #
 # The following are used by the imap code to display progress/status/error messages
@@ -130,27 +138,6 @@
 ## @loc None
 5015=Завантаження повідомлення…
 
-## @name IMAP_STATUS_GETTING_NAMESPACE
-## @loc None
-# LOCALIZATION NOTE (Error 5020): Do not translate the word "IMAP" below.
-5020=Перевірка простору імен IMAP…
-
-## @name IMAP_UPGRADE_NO_PERSONAL_NAMESPACE
-## @loc None
-5021=Поштовий сервер повідомив, що у вас може не бути особистих тек. Перевірте ваші підписки.
-
-## @name IMAP_UPGRADE_PROMPT_USER_2
-## @loc None
-5024=Теки, на які ви не підписалися, не з’являтимуться в списках тек, але ви можете підписатися на них пізніше вибравши пункт меню Підписка в меню Файл.
-
-## @name IMAP_UPGRADE_CUSTOM
-## @loc None
-5026=Виберіть, на які теки ви хочете підписатися, у вікні підписки…
-
-## @name IMAP_UPGRADE_SUCCESSFUL
-## @loc None
-5028=Оновлення пройшло успішно.
-
 ## @name IMAP_GETTING_ACL_FOR_FOLDER
 ## @loc None
 # LOCALIZATION NOTE (Error 5029): Do not translate the word "ACL" below.
@@ -167,20 +154,6 @@
 ## @name IMAP_EMPTY_MIME_PART
 ## @loc None
 5032=Ця частина повідомлення буде завантажена на першу вимогу.
-
-## @name IMAP_UNABLE_TO_SAVE_MESSAGE
-## @loc None
-# LOCALIZATION NOTE (Error 5033): Do not translate the word "IMAP" below.
-5033=Помилка IMAP\: повідомлення не може бути збережене.
-
-## @name IMAP_NO_ONLINE_FOLDER
-## @loc None
-# LOCALIZATION NOTE (Error 5034): Do not translate the word "IMAP" below.
-5034=Помилка IMAP\: вміст онлайн-папки не може бути доставлений.
-
-## @name IMAP_LOGIN_FAILED
-## @loc None
-5035=Помилка реєстрації на сервері %S.
 
 ## @name IMAP_RECEIVING_MESSAGE_HEADERS_OF
 ## @loc None
@@ -227,12 +200,6 @@
 # LOCALIZATION NOTE (Error 5043): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
 5043=Копіювання повідомлення в %S…
-
-## @name IMAP_SELECTING_MAILBOX
-## @loc None
-# LOCALIZATION NOTE (Error 5044): Do not translate the word "%S" below.
-# Place the word %S in your translation where the name of the folder should appear.
-5044=Відкриття теки %S…
 
 ## @name IMAP_FOLDER_RECEIVING_MESSAGE_OF
 ## @loc None
@@ -380,10 +347,6 @@
 ## @loc None
 5082=Службова тека
 
-## @name IMAP_UNKNOWN_USER
-## @loc None
-5083=Невідомо
-
 ## @name IMAP_SERVER_DOESNT_SUPPORT_ACL
 ## @loc None
 5084=Сервер не підтримує роботу із загальними теками.
@@ -395,10 +358,6 @@
 ## @name IMAP_SERVER_DISCONNECTED
 ## @loc None
 5090= Відбулося відключення від %S. Можливо, сервер не працює, або виникли проблеми в мережі.
-
-## @name IMAP_REDIRECT_LOGIN_FAILED
-## @loc None
-5091=Помилка реєстрації.
 
 # LOCALIZATION NOTE (autoSubscribeText): %1$S is the imap folder.
 5092=Підписатися на %1$S?
@@ -436,10 +395,6 @@
 # Place the word %2$S where the total number of messages should appear.
 5103=Триває копіювання повідомлення %1$S з %2$S у %3$S
 
-## @name IMAP_LOGIN_DISABLED
-## @loc None
-5104=Ви не можете увійти на %S оскільки на сервері відключена можливість входу. Можливо вам треба з’єднатися з цим сервером з використанням SSL або TLS. Будь ласка перевірте налаштування вашому обліковому запису для цього поштового сервера.
-
 ## @name IMAP_MOVE_FOLDER_TO_TRASH
 ## @loc None
 # LOCALIZATION NOTE (5105): Do not translate the word %S below.
@@ -459,3 +414,8 @@
 ## @name IMAP_DELETE_FOLDER_BUTTON_LABEL
 ## @loc None
 5108=&Знищити теку
+
+## @name IMAP_LOGIN_DISABLED
+## @loc None
+# LOCALIZATION NOTE (5109): %S is the server address
+5109=You cannot log in to %S because the server doesn't allow plaintext authentication without STARTTLS or SSL/TLS. Try enabling connection security or secure authentication in the account settings.
