--- a/uk/mail/chrome/messenger/messenger.properties
+++ b/uk/mail/chrome/messenger/messenger.properties
@@ -418,14 +418,20 @@ confirmPhishingTitle=Попередження про спробу обману
 confirmPhishingUrl=%1$S вважає, що це повідомлення є шахрайським. Посилання в листі можуть намагатися відтворити зовнішній вигляд веб-сторінок, які Ви хочете відвідати. Ви впевнені, що хочете відвідати %2$S?
 
 # Check for Updates
+# LOCALIZATION NOTE (updatesItem_*): these are alternative labels for Check for Update item in Help menu.
+# Which one is used depends on Update process state.
 updatesItem_default=Перевірити наявність оновлень…
 updatesItem_defaultFallback=Перевірити наявність оновлень…
+updatesItem_default.accesskey=C
 updatesItem_downloading=Завантажується %S…
 updatesItem_downloadingFallback=Триває завантаження оновлення…
+updatesItem_downloading.accesskey=D
 updatesItem_resume=Продовжити завантаження %S…
 updatesItem_resumeFallback=Продовжити завантаження оновлення…
+updatesItem_resume.accesskey=D
 updatesItem_pending=Застосувати завантажене оновлення…
 updatesItem_pendingFallback=Застосувати завантажене оновлення…
+updatesItem_pending.accesskey=D
 
 # Folder Pane Header Title Strings
 folderPaneHeader_all=Всі теки
@@ -470,6 +476,10 @@ processingJunkMessages=Обробка небажаної пошти
 fileNotFoundTitle = File Not Found
 #LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
 fileNotFoundMsg = The file %S does not exist.
+
+fileEmptyTitle = File Empty
+#LOCALIZATION NOTE(fileEmptyMsg): %S is the filename
+fileEmptyMsg = The file %S is empty.
 
 # second person direct object pronoun; used in the collapsed header view if
 # the user is in the To or Cc field of a message
