--- a/uk/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/uk/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -274,17 +274,20 @@ chooseFileToAttach=Вкласти файл(и)
 ##
 windowTitlePrefix=Створення повідомлення\:
 
-## String used by the empty subject dialog
+## Strings used by the empty subject dialog
 subjectEmptyTitle=Subject Reminder
 subjectEmptyMessage=Your message doesn't have a subject.
 sendWithEmptySubjectButton=&Send Without Subject
 cancelSendingButton=&Cancel Sending
 
-## String used by the dialog that informs the user about the newsgroup recipient
+## Strings used by the dialog that informs about lack of newsgroup support.
+noNewsgroupSupportTitle=Newsgroups Not Supported
 recipientDlogMessage=Цей обліковий запис підтримує тільки адресатів електронної пошти. Поштові повідомлення в конференції відсилатись не будуть.
 
-#String used by the alert that tells the user an e-mail address is invalid
+## Strings used by the alert that tells the user an e-mail address is invalid.
+addressInvalidTitle=Invalid Recipient Address
 addressInvalid=%1$S не є адресою електронної пошти, оскільки він написаний не у формі користувач@сервер. Ви повинні виправити його перед відсиланням повідомлення.
+
 ## String used by the dialog that ask the user to attach a web page
 attachPageDlogTitle=Вкажіть розташування файлу, що вкладається
 attachPageDlogMessage=Веб-сторінка (URL)\:
