--- a/uk/calendar/installer/mui.properties
+++ b/uk/calendar/installer/mui.properties
@@ -44,20 +44,21 @@
 # Accesskeys are defined by prefixing the letter that is to be used for the
 # accesskey with an ampersand (e.g. &).
 
-# Do not replace $(^NameDA) or $(^Name) with a custom string.
-
-# Do not change $(^NameDA) to $(^Name) or $(^Name) to $(^NameDA). NameDA allows
-# Name to contain an ampersand (e.g. DA stands for double ampersand) and
-# prevents the letter following the ampersand being used as an accesskey.
+# Do not replace $BrandShortName, $BrandFullName, or $BrandFullNameDA with a
+# custom string and always use the same one as used by the en-US files.
+# $BrandFullNameDA allows the string to contain an ampersand (e.g. DA stands
+# for double ampersand) and prevents the letter following the ampersand from
+# being used as an accesskey.
 
 # You can use \n to create a newline in the string but only when the string
 # from en-US contains a \n.
+
 MUI_TEXT_WELCOME_INFO_TITLE=Ласкаво просимо до Майстра встановлення $(^NameDA)
 MUI_TEXT_WELCOME_INFO_TEXT=Цей майстер допоможе Вам зі встановленням $(^NameDA).\n\nРекомендуємо закрити усі інші програми перед початком Налаштування. Це дасть змогу оновити відповідні системні файли без потреби перевантаження комп’ютера.\n\n$_CLICK
 MUI_TEXT_LICENSE_TITLE=Ліцензійна угода
 MUI_TEXT_LICENSE_SUBTITLE=Будь ласка, перегляньте ліцензійні умови перед встановленням $(^NameDA).
 MUI_INNERTEXT_LICENSE_TOP=Натискайте Page Down для перегляду угоди повністю.
-MUI_INNERTEXT_LICENSE_BOTTOM_RADIOBUTTONS=Якщо Ви приймаєте усі умови угоди, оберіть перший варіант нижче. Ви повинні прийняти угоду для встановлення $(^NameDA). $_CLICK
+MUI_INNERTEXT_LICENSE_BOTTOM_CHECKBOX=Якщо Ви приймаєте усі умови угоди, клацніть по пташці нижче. Ви повинні прийняти угоду для встановлення $BrandFullNameDA. $_CLICK
 MUI_TEXT_COMPONENTS_TITLE=Оберіть компоненти
 MUI_TEXT_COMPONENTS_SUBTITLE=Оберіть можливості $(^NameDA), які Ви хочете встановити.
 MUI_INNERTEXT_COMPONENTS_DESCRIPTION_TITLE=Опис
