--- a/uk/calendar/chrome/calendar/dateFormat.properties
+++ b/uk/calendar/chrome/calendar/dateFormat.properties
@@ -18,7 +18,9 @@
 # Portions created by OEone Corporation are Copyright (C) 2001
 # OEone Corporation. All Rights Reserved.
 #
-# Contributor(s): Garth Smedley <garths@oeone.com>
+# Contributor(s):
+#   Garth Smedley <garths@oeone.com>
+#   Martin Schroeder <mschroeder@mozilla.x-home.org>
 #
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -33,8 +35,6 @@
 # the terms of any one of the MPL, the GPL or the LGPL.
 #
 # ***** END LICENSE BLOCK *****
-
-# Month names - Add full names when needed 
 
 month.1.Mmm=Січ
 month.2.Mmm=Лют
@@ -62,7 +62,6 @@ month.10.name=Жовтень
 month.11.name=Листопад
 month.12.name=Грудень
 
-#Don't change this without notifying people in calendar first.
 day.1.name=Неділя
 day.2.name=Понеділок
 day.3.name=Вівторок
@@ -88,24 +87,7 @@ day.5.short=Чт
 day.6.short=Пт
 day.7.short=Сб
 
-
 noon=обід
 midnight=опівніч
 
 AllDay=Весь день
-
-# Added to support localization of messages within calendar-event-dialog.js
-#   Day ordinals imply order within a list.
-
-
-# For the recurrence dialog
-# 
-
-
-
-
-
-
-
-# Will be subsituted with day and one of ordinal.suffix.N
-# 15th day місяця
