--- a/nb-NO/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/nb-NO/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -289,7 +289,7 @@ addressInvalidTitle=Ugyldig mottakeradresse
 addressInvalid=%1$S er ikke en gyldig e-postadresse, fordi den er ikke på formen bruker@vert. Du må korrigere den før du sender e-posten.
 
 ## String used by the dialog that ask the user to attach a web page
-attachPageDlogTitle=Velg et nettsted for å legge ved
+attachPageDlogTitle=Velg et nettsted å legge ved
 attachPageDlogMessage=Nettside (URL):
 
 ## String used for attachment pretty name, when attachment is a message
