--- a/nb-NO/mail/installer/mui.properties
+++ b/nb-NO/mail/installer/mui.properties
@@ -53,7 +53,7 @@
 # You can use \n to create a newline in the string but only when the string
 # from en-US contains a \n.
 MUI_TEXT_WELCOME_INFO_TITLE=Velkommen til $BrandFullNameDA
-MUI_TEXT_WELCOME_INFO_TEXT=Denne veiviseren leder deg gjennom installeringen av $BrandFullNameDA.\n\nDet anbefales at du avslutter alle andre programmer før du fortsetter. Dette lar installeringsprogrammet oppdatere systemfiler uten at du må starte datamaskinen på nytt.\n\n$_CLICK
+MUI_TEXT_WELCOME_INFO_TEXT=Denne veiviseren leder deg gjennom installeringen av $BrandFullNameDA.\n\nDu bør avslutte alle andre programmer før du fortsetter, slik at installeringsprogrammet kan oppdatere systemfiler uten at du må starte datamaskinen på nytt.\n\n$_CLICK
 MUI_TEXT_COMPONENTS_TITLE=Velg komponenter
 MUI_TEXT_COMPONENTS_SUBTITLE=Velg hvilke deler av $BrandFullNameDA du ønsker å installere.
 MUI_INNERTEXT_COMPONENTS_DESCRIPTION_TITLE=Beskrivelse
