--- a/fi/mail/chrome/messenger/messenger.properties
+++ b/fi/mail/chrome/messenger/messenger.properties
@@ -174,7 +174,6 @@ outboxFolderName=Lähtevät
 junkFolderName=Roskapostit
 archivesFolderName=Arkisto
 
-
 # Error message for special folder deletion on imap accounts
 # LOCALIZATION NOTES (specialFolderDeletionErr): Do not translate "IMAP" in the line below
 specialFolderDeletionErr=Erityisen kansion %S poistaminen ei ole sallittua IMAP-tileillä.
@@ -424,14 +423,20 @@ confirmPhishingTitle=Sähköpostihuijaushälytys
 confirmPhishingUrl=%1$S arvioi tämän viestin olevan sähköpostihuijaus. Sähköpostin linkit voivat näyttää linkeiltä sivustoille, joilla haluat vierailla. Avataanko yhteys sivustoon %2$S?
 
 # Check for Updates
+# LOCALIZATION NOTE (updatesItem_*): these are alternative labels for Check for Update item in Help menu.
+# Which one is used depends on Update process state.
 updatesItem_default=Hae päivityksiä…
 updatesItem_defaultFallback=Hae päivityksiä…
+updatesItem_default.accesskey=H
 updatesItem_downloading=Ladataan päivitystä %S…
 updatesItem_downloadingFallback=Ladataan päivitystä…
+updatesItem_downloading.accesskey=L
 updatesItem_resume=Jatka päivityksen %S lataamista…
 updatesItem_resumeFallback=Jatka päivityksen lataamista…
+updatesItem_resume.accesskey=J
 updatesItem_pending=Asenna ladattu päivitys heti…
 updatesItem_pendingFallback=Asenna ladattu päivitys heti…
+updatesItem_pending.accesskey=A
 
 # Folder Pane Header Title Strings
 folderPaneHeader_all=Kaikki kansiot
@@ -477,12 +482,21 @@ fileNotFoundTitle = Tiedostoa ei löytynyt
 #LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
 fileNotFoundMsg = Tiedostoa %S ei ole olemassa.
 
+fileEmptyTitle = Tiedosto tyhjä
+#LOCALIZATION NOTE(fileEmptyMsg): %S is the filename
+fileEmptyMsg = Tiedosto %S on tyhjä.
+
 # second person direct object pronoun; used in the collapsed header view if
 # the user is in the To or Cc field of a message
 headerFieldYou=Sinä
 
-# The what's new tab title, shown on version update
-whatsNew=Mitä uutta
+# Shown when content tabs are being loaded.
+loadingTab=Ladataan…
+
+applyToCollapsedMsgsTitle=Vahvista viestien poisto supistetuista viestiketjuista
+applyToCollapsedMsgs=Varoitus - toiminto poistaa viestit supistetuista viestiketjuista
+applyToCollapsedAlwaysAskCheckbox=Kysy aina ennen viestien poistamista supistetuista viestiketjuista
+applyNowButton=Toteuta
 
 #LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
 # glodaWhyColumn when performing a gloda-backed search, explaining why a
