--- a/fi/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/fi/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -274,15 +274,20 @@ chooseFileToAttach=Liitä tiedosto(t)
 ##
 windowTitlePrefix=Kirjoita:
 
-## String used by the dialog that ask the user to enter a subject
-sendMsgTitle=Lähetä viesti
-subjectDlogMessage=Et kirjoittanut viestille aihetta. Jos haluat antaa viestille aiheen, voit tehdä niin nyt.
+## Strings used by the empty subject dialog
+subjectEmptyTitle=Muistutus aiheesta
+subjectEmptyMessage=Viestilläsi ei ole kirjoitettu aihetta.
+sendWithEmptySubjectButton=&Lähetä viesti ilman aihetta
+cancelSendingButton=&Peruuta lähettäminen
 
-## String used by the dialog that informs the user about the newsgroup recipient
+## Strings used by the dialog that informs about lack of newsgroup support.
+noNewsgroupSupportTitle=Keskusteluryhmiä ei tueta
 recipientDlogMessage=Tämä tili tukee vain sähköpostin vastaanottajia. Jatkettaessa keskusteluryhmät jätetään huomiotta.
 
-#String used by the alert that tells the user an e-mail address is invalid
+## Strings used by the alert that tells the user an e-mail address is invalid.
+addressInvalidTitle=Virheellinen sähköpostiosoite
 addressInvalid=%1$S ei ole oikea sähköpostiosoite, koska sen muoto ei ole käyttäjä@palvelin. Korjaa osoite ennen kuin lähetät sähköpostin.
+
 ## String used by the dialog that ask the user to attach a web page
 attachPageDlogTitle=Määritä liitettävä tiedosto
 attachPageDlogMessage=Verkkosivu (URL):
@@ -331,7 +336,7 @@ renameAttachmentMessage=Liitteen nimi:
 ## Attachment Reminder
 ## LOCALIZATION NOTE (mail.compose.attachment_reminder_keywords): comma separated
 ##   words that that should trigger an attachment reminder.
-mail.compose.attachment_reminder_keywords=attachment,attached,.doc,.pdf,resume,cover letter, hakemus, liitteenä, liitettynä, liitetiedosto
+mail.compose.attachment_reminder_keywords=.doc,.pdf,attachment,attach,attached,attaching,enclosed,CV,cover letter,liite,liitteenä,liitetiedosto,liitetiedostot,liitetiedostoissa,liitetiedostossa,ohessa,hakemus
 attachmentReminderTitle=Liitetiedostoista muistuttaja
 attachmentReminderMsg=Unohditko liittää tiedoston?
 attachmentReminderYesIForgot=Kyllä unohdin!
