--- a/pt-BR/mail/chrome/messenger/preferences/preferences.properties
+++ b/pt-BR/mail/chrome/messenger/preferences/preferences.properties
@@ -15,26 +15,31 @@ confirmResetJunkTrainingText=Tem certeza que deseja excluir todo o treinamento a
 #### Downloads
 desktopFolderName=Área de trabalho
 myDownloadsFolderName=Meus downloads
-chooseDownloadFolderTitle=Selecione a pasta dos anexos:
+chooseAttachmentsFolderTitle=Selecionar a pasta
 
-#### Download Actions
-extensionNone=(NENHUMA)
-removeButtonSingle=Excluir ação
-removeButtonMultiple=Excluir ações
-removeTitleSingle=Excluir ação
-removeTitleMultiple=Excluir ações
-removeMessageSingle=A ação selecionada não será mais executada quandos os tipos de arquivos associados forem recebidos. Tem certeza que deseja excluí-la?
-removeMessageMultiple=As ações selecionadas não serão mais executadas quandos os tipos de arquivos associados forem recebidos. Tem certeza que deseja excluí-las?
+#### Applications
+
 fileEnding=arquivo %S
-saveToDisk=Salvar
-openWith=Abrir com %S
-actionsFiltered=Estas ações satisfazem a sua pesquisa:
-actionsAll=Executar automaticamente a ação associada a cada um destes tipos de arquivo:
+saveFile=Salvar arquivo
 
-#### Change Action
-extensionStringFormat=%S, %S
+# LOCALIZATION NOTE (useApp, useDefault): %S = Application name
+useApp=Abrir com o %S
+useDefault=Abrir com o %S (padrão)
+
+useOtherApp=Abrir com…
 fpTitleChooseApp=Selecionar aplicativo
-fpTitleChooseDL=Selecione a pasta para os downloads:
+manageApp=Detalhes do aplicativo…
+alwaysAsk=Perguntar
+
+# LOCALIZATION NOTE (usePluginIn):
+# %1$S = plugin name (for example "QuickTime Plugin-in 7.2")
+# %2$S = brandShortName from brand.properties (for example "Shredder")
+usePluginIn=Abrir com o %1$S (no %2$S)
+
+# LOCALIZATION NOTE (typeDescriptionWithType):
+# %1$S = type description (for example "Portable Document Format")
+# %2$S = type (for example "application/pdf")
+typeDescriptionWithType=%1$S (%2$S)
 
 #### Sound Notifications
 soundFilePickerTitle=Selecionar um som
@@ -42,3 +47,9 @@ soundFilePickerTitle=Selecionar um som
 #### Shell Service
 alreadyDefaultClientTitle=Aplicativo padrão
 alreadyDefault=O %S já está definido como o aplicativo de email padrão.
+
+#### Attachment Reminder
+attachmentReminderAddDialogTitle=Adicionar palavra-chave
+attachmentReminderAddText=Palavra-chave:
+attachmentReminderEditDialogTitle=Editar palavra-chave
+attachmentReminderEditText=Palavra-chave:
